extraction of Hotel name, Address and Stars fixed

--- a/API/02.Services/FyndParser/Fynd.Parser.Endpoint/Fynd.Parser.Endpoint.csproj
+++ b/API/02.Services/FyndParser/Fynd.Parser.Endpoint/Fynd.Parser.Endpoint.csproj
@@ -27,6 +27,7 @@
 		<PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.10.9" />
 	</ItemGroup>
 	<ItemGroup>
+	  <Folder Include="Configs\" />
 	  <Folder Include="Grpc\Map\" />
 	  <Folder Include="Grpc\Proto\" />
 	</ItemGroup>
