--- a/API/02.Services/FyndParser/Fynd.Parser.Application/Fynd.Parser.Application.csproj
+++ b/API/02.Services/FyndParser/Fynd.Parser.Application/Fynd.Parser.Application.csproj
@@ -5,6 +5,8 @@
 	</PropertyGroup>
 	<ItemGroup>
 		
+		<PackageReference Include="HtmlAgilityPack" Version="1.11.34" />
+		
 		<PackageReference Include="MediatR" Version="9.0.0" /> 
 	</ItemGroup>
 
