--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,7 @@
 version: "3.9"
 services:
   Fynd.Parser.service:
-      image: ${DOCKER_REGISTRY-}Parser
+      image: ${DOCKER_REGISTRY-}parser
       environment:
         - ASPNETCORE_ENVIRONMENT=Development
       ports:
